# rust-stuff

./: Cargo.toml  build.rs
.cargo/: config  config.toml
.vim/: coc-settings.json
src/: allocator.rs  gdt.rs  interrupts.rs  klog.rs  lib.rs  main.rs  memory.rs  mouse.rs  screenbuffer.rs  term.rs  textbuffer.rs  time.rs  vga.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/gui/: mod.rs  window.rs
src/peripheral/: keyboard.rs  mod.rs  mouse.rs
src/task/: canvasgame.rs  executor.rs  keyboard.rs  mod.rs  mouse.rs  print.rs  term.rs
src/vga/: mod.rs  term.rs  writer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
