[package]
name = "rust-stuff"
version = "0.1.0"
authors = ["faazuthnar <faazuthnar@faazuthnar.xyz>"]
edition = "2018"

[package.metadata.bootimage]
run-args = [
    "-serial", "stdio"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
rlibc = "1.0.0"
bootloader = {version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.3.0"
spin = "0.5.2"
x86_64 = "0.11.2"
uart_16550 = "0.2.7"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"
linked_list_allocator="0.8"
log = {version = "0.4.11", default-features = false }
vga = "0.2.4"
num_enum = {version = "0.5", default-features = false}

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2"
default-features = false

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.crossbeam-utils]
version = "0.7"
default-features = false
features = ["alloc"]
