[package]
name = "rust-stuff"
version = "0.1.0"
authors = ["faazuthnar <faazuthnar@faazuthnar.xyz>"]
edition = "2018"

[package.metadata.bootimage]
run-args = [
    "-serial", "stdio"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
rlibc = "1.0.0"
bootloader = "0.10"
volatile = "0.4"
spin = "0.9"
x86_64 = "0.14.10"
uart_16550 = "^0.2.14"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = { version="0.9.0" }
log = {version = "0.4", default-features = false }
vga = { git = "https://github.com/rust-osdev/vga" }
num_enum = {version = "0.5", default-features = false}
ps2-mouse = { git = "https://github.com/rust-osdev/ps2-mouse" }
canvasgame-rust = { git = "https://github.com/akosnad/canvasgame-rust", default-features = false, features = ["bare"] }

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3"
default-features = false

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.crossbeam-utils]
version = "0.8"
default-features = false
